# pokebot

./: Readme.md  main.py  pyproject.toml  requirements.txt
data/med/articles/: diabetes.txt  healthcare.txt
data/poisoning/: diabetes.txt
gengar/: main.py
pokebot/: main.py  rag.py
pokebot/detoxio/: evaluator.py  generator.py
